--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <html>
     <head>
-        <title>Object Oriented JavaScript</title>
-        <style>
-            h1{ 
-                text-align: center; 
-                color: #444; 
-                font-family: 'Trebuchet MS';
-                margin: 60px auto; 
-            }
-        </style>
+        <title>Async Javascript</title>
+        <script src=<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+       
     </head>
     <body>
-        <h1>Object Oriented JavaScript</h1>
-        <script src="objects.js"></script>
+        <h1>async javascript</h1>
+        <script src="async.js"></script>
     </body>
 </html>
